# AssetPack

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/app/: EditorApp.cpp  EditorApp.hpp  EditorAppState.hpp  Logger.cpp  Logger.hpp
src/domain/: TileMap.cpp  TileMap.hpp
src/pipeline/: BinIO.cpp  BinIO.hpp  Diff.cpp  Diff.hpp  IO.hpp  JsonIO.cpp  JsonIO.hpp  Validator.cpp  Validator.hpp
src/platform/: WinFileDialog.cpp  WinFileDialog.hpp
src/ui/: TilesetTextureCache.cpp  TilesetTextureCache.hpp  UiBottomTabs.cpp  UiBottomTabs.hpp  UiInspector.cpp  UiInspector.hpp  UiProject.cpp  UiProject.hpp  UiRoot.cpp  UiRoot.hpp  UiViewport.cpp  UiViewport.hpp
src/util/: PathUtil.cpp  PathUtil.hpp
